# trippier-public-API

./: .env.example  .env.standalone  .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  docker-compose.dev.yml  docker-compose.full.yml  docker-compose.simple.yml  docker-compose.standalone.yml
.github/workflows/: build-push.yml  ci.yml
auth-api/: Dockerfile  Dockerfile.dev  go.mod  go.sum
auth-api/cmd/server/: main.go
auth-api/internal/apikey/: handler.go  handler_test.go  service.go  service_test.go
auth-api/internal/auth/: handler.go  service.go  service_test.go
auth-api/internal/config/: config.go  config_test.go
auth-api/internal/db/: postgres.go
auth-api/internal/email/: smtp.go  (+1 more)
docs/: package.json
docs/.source/: browser.ts  server.ts
docs/app/: globals.css  layout.tsx
docs/components/: try-base.tsx  try-events-slim.tsx  try-events.tsx  try-itinerary.tsx  try-panel.tsx  try-pois-slim.tsx  try-pois.tsx  try-providers.tsx
docs/lib/: internal-auth.ts  source.ts  status.ts
frontend/: Dockerfile  package-lock.json  package.json  svelte.config.js  vite.config.ts  vitest.config.ts
frontend/scripts/: gen-topo.ts
frontend/src/: app.css  app.html
itinerary-api/: .dockerignore  .env.example  Dockerfile  pyproject.toml  requirements-dev.txt  requirements.txt
itinerary-api/app/: config.py  main.py
itinerary-api/app/middleware/: ratelimit.py
itinerary-api/app/models/: types.py
itinerary-api/app/routers/: itinerary.py
itinerary-api/app/services/: itinerary_service.py  poi_client.py
itinerary-api/tests/: test_itinerary_router.py  test_itinerary_service.py  test_ratelimit_middleware.py
poi-api/: .air.toml  .dockerignore  .env.example  .gitignore  .golangci.yml  Dockerfile  Dockerfile.dev  coverage.out  go.mod  go.sum
(+90 files in other folders)
